--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -7260,6 +7260,10 @@ $(document).ready(function(){
         {
           Pregunta: "ident_caract_usuario1",
           Respuesta : $("#ident_caract_usuario1").val()
+        },
+        {
+          Pregunta: "ident_caract_usuario1a",
+          Respuesta : $("#ident_caract_usuario1a").val()
         },  
         {
           Pregunta: "res_pregunta2",
