--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -7322,10 +7322,6 @@ $(document).ready(function(){
           Respuesta : pregunta7a
         },
         {
-          Pregunta: "res_pregunta7a",
-          Respuesta : pregunta7a
-        },   
-        {
           Pregunta: "pregunta7b",
           Respuesta : pregunta7b
         },  
@@ -8054,7 +8050,7 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20b_3_otra").val()
         },
         {
-        Pregunta: "Pregunta 20a_3",
+        Pregunta: "Pregunta 20c_3",
         Respuesta : $("#res_pregunta20c_3").val()
         },
         {
