--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -807,6 +807,19 @@
           </div>
         </div>
       </div>  
+
+    <div class="alert alert-primary" role="alert">
+    10. En los últimos 6 meses ¿Cuáles de los siguientes servicios de salud ha utilizado usted a través de su EPS? (ENC: Lea opciones y registre en la columna de “Si lo utilizó”, RM)</div>
+
+    <div class="alert alert-primary" role="alert">
+    11. (ENC: Entregue tarjeta P11/ aplique solo a servicios que utilizó)Utilizando una escala de 1 a 5, 1 corresponde a un muy mal servicio y donde 5 indica un muy buen servicio. ¿Cómo califica el servicio de____ recibido en los últimos 6 meses? (ENC: Registre en las columnas de calificación del servicio, RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    12. Desde el momento en que obtuvo la autorización y pidió cita para el  servicio de  ______ (ENC: Indique cada servicio utilizado) ¿Cuánto tiempo debió esperar para ser atendido (¿A cuántos días le dieron la cita?) (ENC: Registre en la columna "Tiempo (días, horas, min)" de cada servicio, para tiempos de espera de un mes o mas, convierta cada mes en 30 días y anote total días. RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    13. (Entregue tarjeta P13) ¿De acuerdo a las opciones de esta tarjeta, como le pareció el tiempo de espera para ser atendido en el servicio de ______? (RU Para cada servicio) ENC: Puede aplicar simultanea P12 y  P13.</div>
+      
     <div id="PreguntaB4" class="hidden">
       <div class="input-group">
         <div class="col-md-6">
@@ -1004,7 +1017,18 @@
         </div>
       </div>  
     </div>
+    
+    <div class="alert alert-primary" role="alert">
+    10. En los últimos 6 meses ¿Cuáles de los siguientes servicios de salud ha utilizado usted a través de su EPS? (ENC: Lea opciones y registre en la columna de “Si lo utilizó”, RM)</div>
 
+    <div class="alert alert-primary" role="alert">
+    11. (ENC: Entregue tarjeta P11/ aplique solo a servicios que utilizó)Utilizando una escala de 1 a 5, 1 corresponde a un muy mal servicio y donde 5 indica un muy buen servicio. ¿Cómo califica el servicio de____ recibido en los últimos 6 meses? (ENC: Registre en las columnas de calificación del servicio, RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    12. Desde el momento en que obtuvo la autorización y pidió cita para el  servicio de  ______ (ENC: Indique cada servicio utilizado) ¿Cuánto tiempo debió esperar para ser atendido (¿A cuántos días le dieron la cita?) (ENC: Registre en la columna "Tiempo (días, horas, min)" de cada servicio, para tiempos de espera de un mes o mas, convierta cada mes en 30 días y anote total días. RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    13. (Entregue tarjeta P13) ¿De acuerdo a las opciones de esta tarjeta, como le pareció el tiempo de espera para ser atendido en el servicio de ______? (RU Para cada servicio) ENC: Puede aplicar simultanea P12 y  P13.</div>
 
     <div class="input-group">
       <div class="col-md-6">
@@ -1201,7 +1225,17 @@
         </div>
       </div>  
     </div>
+    <div class="alert alert-primary" role="alert">
+    10. En los últimos 6 meses ¿Cuáles de los siguientes servicios de salud ha utilizado usted a través de su EPS? (ENC: Lea opciones y registre en la columna de “Si lo utilizó”, RM)</div>
 
+    <div class="alert alert-primary" role="alert">
+    11. (ENC: Entregue tarjeta P11/ aplique solo a servicios que utilizó)Utilizando una escala de 1 a 5, 1 corresponde a un muy mal servicio y donde 5 indica un muy buen servicio. ¿Cómo califica el servicio de____ recibido en los últimos 6 meses? (ENC: Registre en las columnas de calificación del servicio, RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    12. Desde el momento en que obtuvo la autorización y pidió cita para el  servicio de  ______ (ENC: Indique cada servicio utilizado) ¿Cuánto tiempo debió esperar para ser atendido (¿A cuántos días le dieron la cita?) (ENC: Registre en la columna "Tiempo (días, horas, min)" de cada servicio, para tiempos de espera de un mes o mas, convierta cada mes en 30 días y anote total días. RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    13. (Entregue tarjeta P13) ¿De acuerdo a las opciones de esta tarjeta, como le pareció el tiempo de espera para ser atendido en el servicio de ______? (RU Para cada servicio) ENC: Puede aplicar simultanea P12 y  P13.</div>
     <div class="input-group">
       <div class="col-md-6">
       <label id="servicios">H. Tratamientos asistidos: quimioterapia-radioterapias-diálisis</label>
@@ -1397,7 +1431,18 @@
         </div>
       </div>  
     </div>
+    
+    <div class="alert alert-primary" role="alert">
+    10. En los últimos 6 meses ¿Cuáles de los siguientes servicios de salud ha utilizado usted a través de su EPS? (ENC: Lea opciones y registre en la columna de “Si lo utilizó”, RM)</div>
 
+    <div class="alert alert-primary" role="alert">
+    11. (ENC: Entregue tarjeta P11/ aplique solo a servicios que utilizó)Utilizando una escala de 1 a 5, 1 corresponde a un muy mal servicio y donde 5 indica un muy buen servicio. ¿Cómo califica el servicio de____ recibido en los últimos 6 meses? (ENC: Registre en las columnas de calificación del servicio, RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    12. Desde el momento en que obtuvo la autorización y pidió cita para el  servicio de  ______ (ENC: Indique cada servicio utilizado) ¿Cuánto tiempo debió esperar para ser atendido (¿A cuántos días le dieron la cita?) (ENC: Registre en la columna "Tiempo (días, horas, min)" de cada servicio, para tiempos de espera de un mes o mas, convierta cada mes en 30 días y anote total días. RU por servicio)</div>
+
+    <div class="alert alert-primary" role="alert">
+    13. (Entregue tarjeta P13) ¿De acuerdo a las opciones de esta tarjeta, como le pareció el tiempo de espera para ser atendido en el servicio de ______? (RU Para cada servicio) ENC: Puede aplicar simultanea P12 y  P13.</div>
     <div class="input-group">
       <div class="col-md-6">
       <label id="servicios">L. Radiografías, imágenes o pruebas de diagnóstico</label>
