--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -483,7 +483,7 @@
   </div> 
   <div id="Pregunta10C">
     <label> <strong> 10. C. Citas prioritarias cita no programada </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_c).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_c).having("pregunta10_c != ?", "--").having("pregunta10_c != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -518,7 +518,7 @@
   </div> 
   <div id="Pregunta10D">
     <label> <strong> 10. D. Urgencias </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_d).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_d).having("pregunta10_d != ?", "--").having("pregunta10_d != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -553,7 +553,7 @@
   </div> 
   <div id="Pregunta10E">
     <label> <strong> 10. E. Hospitalización </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_e).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_e).having("pregunta10_e != ?", "--").having("pregunta10_e != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -588,7 +588,7 @@
   </div> 
   <div id="Pregunta10F">
     <label> <strong> 10. F. Domiciliario: médicos, cuidados </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_f).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_f).having("pregunta10_f != ?", "--").having("pregunta10_f != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -623,7 +623,7 @@
   </div> 
   <div id="Pregunta10G">
     <label> <strong> 10. G. Entrega de medicamentos </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_g).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_g).having("pregunta10_g != ?", "--").having("pregunta10_g != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -658,7 +658,7 @@
   </div> 
   <div id="Pregunta10H">
     <label> <strong> 10. H. Tratamientos asistidos: quimioterapia-radioterapias-diálisis </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_h).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_h).having("pregunta10_h != ?", "--").having("pregunta10_h != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -693,7 +693,7 @@
   </div> 
   <div id="Pregunta10I">
     <label> <strong> 10. I. Programas de promoción de la salud y prevención de la enfermedad (PyP) </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_i).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_i).having("pregunta10_i != ?", "--").having("pregunta10_i != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -728,7 +728,7 @@
   </div> 
   <div id="Pregunta10J">
     <label> <strong> 10. J. Odontología </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_j).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_j).having("pregunta10_j != ?", "--").having("pregunta10_j != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -763,7 +763,7 @@
   </div> 
   <div id="Pregunta10K">
     <label> <strong> 10. K. Exámenes de laboratorio </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_k).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_k).having("pregunta10_k != ?", "--").having("pregunta10_k != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -798,7 +798,7 @@
   </div> 
   <div id="Pregunta10L">
     <label> <strong> 10. L. Radiografías, imágenes o pruebas de diagnóstico </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_l).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_l).having("pregunta10_l != ?", "--").having("pregunta10_l != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -833,7 +833,7 @@
   </div> 
   <div id="Pregunta10M">
     <label> <strong> 10. M. Terapias en la EPS: físicas, respiratorias, ocupacional, de lenguaje </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_m).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_m).having("pregunta10_m != ?", "--").having("pregunta10_m != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
@@ -868,7 +868,7 @@
   </div>     
   <div id="Pregunta10N">
     <label> <strong> 10. N. Suministro de oxígeno  </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta10_n).count(:id) %>
+    <%= pie_chart Encuestum.group(:pregunta10_n).having("pregunta10_n != ?", "--").having("pregunta10_n != ?", "").count(:id) %>
 <br>
     <table class="table">
       <thead>
