--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -1893,7 +1893,7 @@
           <%= f.label :pregunta20C_1, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_1_hora ,id:"otros_servicios" %>
+          <%= f.text_field :pregunta20C_1_hora ,id:"res_pregunta20c_1_hora" %>
           <%= f.select :pregunta20C_1, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_1"}%>
           </div>
         </div>
@@ -1959,7 +1959,7 @@
           <%= f.label :pregunta20C_2, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_2_hora ,id:"otros_servicios" %>
+          <%= f.text_field :pregunta20C_2_hora ,id:"res_pregunta20c_2_hora" %>
           <%= f.select :pregunta20C_2, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_2"}%>
           </div>
         </div>
@@ -2025,7 +2025,7 @@
           <%= f.label :pregunta20C_3, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_3_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_3_hora ,id:"res_pregunta20c_3_hora"%>
           <%= f.select :pregunta20C_3, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_3"}%>
           </div>
         </div>
@@ -2091,7 +2091,7 @@
           <%= f.label :pregunta20C_4, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_4_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_4_hora ,id:"res_pregunta20c_4_hora"%>
           <%= f.select :pregunta20C_4, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_4"}%>
           </div>
         </div>
@@ -2157,7 +2157,7 @@
           <%= f.label :pregunta20C_5, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_5_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_5_hora ,id:"res_pregunta20c_5_hora"%>
           <%= f.select :pregunta20C_5, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_5"}%>
           </div>
         </div>
@@ -2223,7 +2223,7 @@
           <%= f.label :pregunta20C_6, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_6_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_6_hora ,id:"res_pregunta20c_6_hora"%>
           <%= f.select :pregunta20C_6, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_6"}%>
           </div>
         </div>
@@ -2289,7 +2289,7 @@
           <%= f.label :pregunta20C_7, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_7_hora ,id:"otros_servicios" %>
+          <%= f.text_field :pregunta20C_7_hora ,id:"res_pregunta20c_7_hora" %>
           <%= f.select :pregunta20C_7, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_7"}%>
           </div>
         </div>
@@ -2355,7 +2355,7 @@
           <%= f.label :pregunta20C_8, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_8_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_8_hora ,id:"res_pregunta20c_8_hora"%>
           <%= f.select :pregunta20C_8, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_8"}%>
           </div>
         </div>
@@ -2421,7 +2421,7 @@
           <%= f.label :pregunta20C_9, "20C. Cuanto tiempo le tomó  hacer éste trámite" ,id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_9_hora %>
+          <%= f.text_field :pregunta20C_9_hora ,id:"res_pregunta20c_9_hora" %>
           <%= f.select :pregunta20C_9, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_9"}%>
           </div>
         </div>
@@ -2487,7 +2487,7 @@
           <%= f.label :pregunta20C_10, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_10_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_10_hora ,id:"res_pregunta20c_10_hora"%>
           <%= f.select :pregunta20C_10, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_10"}%>
           </div>
         </div>
@@ -2553,7 +2553,7 @@
           <%= f.label :pregunta20C_11, "20C. Cuanto tiempo le tomó  hacer éste trámite" ,id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_11_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_11_hora ,id:"res_pregunta20c_11_hora"%>
           <%= f.select :pregunta20C_11, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_11"}%>
           </div>
         </div>
@@ -2619,7 +2619,7 @@
           <%= f.label :pregunta20C_12, "20C. Cuanto tiempo le tomó  hacer éste trámite" ,id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_12_hora ,id:"otros_servicios" %>
+          <%= f.text_field :pregunta20C_12_hora ,id:"res_pregunta20c_12_hora" %>
           <%= f.select :pregunta20C_12, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_12"}%>
           </div>
         </div>
@@ -2685,7 +2685,7 @@
           <%= f.label :pregunta20C_13, "20C. Cuanto tiempo le tomó  hacer éste trámite" ,id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_13_hora ,id:"otros_servicios" %>
+          <%= f.text_field :pregunta20C_13_hora ,id:"res_pregunta20c_13_hora" %>
           <%= f.select :pregunta20C_13, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_13"}%>
           </div>
         </div>
@@ -2751,7 +2751,7 @@
             <%= f.label :pregunta20C_14, "20C. Cuanto tiempo le tomó  hacer éste trámite" ,id:"otros_servicios"%>
             </div>
             <div class="col-md-8 input-group" style="padding: 15px;">
-            <%= f.text_field :pregunta20C_14_hora ,id:"otros_servicios" %>
+            <%= f.text_field :pregunta20C_14_hora ,id:"res_pregunta20c_14_hora" %>
             <%= f.select :pregunta20C_14, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_14"}%>
             </div>
           </div>
@@ -2818,7 +2818,7 @@
           <%= f.label :pregunta20C_15, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_15_hora, id:"otros_servicios" %>
+          <%= f.text_field :pregunta20C_15_hora ,id:"res_pregunta20c_15_hora" %>
           <%= f.select :pregunta20C_15, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_15"}%>
           </div>
         </div>
@@ -2884,7 +2884,7 @@
           <%= f.label :pregunta20C_16, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_16_hora ,id:"otros_servicios" %>
+          <%= f.text_field :pregunta20C_16_hora ,id:"res_pregunta20c_16_hora" %>
           <%= f.select :pregunta20C_16, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_16"}%>
           </div>
         </div>
@@ -2950,7 +2950,7 @@
           <%= f.label :pregunta20C_17, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_17_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_17_hora ,id:"res_pregunta20c_17_hora"%>
           <%= f.select :pregunta20C_17, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_17"}%>
           </div>
         </div>
@@ -3016,7 +3016,7 @@
           <%= f.label :pregunta20C_18, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_18_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_18_hora ,id:"res_pregunta20c_18_hora"%>
           <%= f.select :pregunta20C_18, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_18"}%>
           </div>
         </div>
@@ -3082,7 +3082,7 @@
           <%= f.label :pregunta20C_19, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_19_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_19_hora ,id:"res_pregunta20c_19_hora"%>
           <%= f.select :pregunta20C_19, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_19"}%>
           </div>
         </div>
@@ -3147,7 +3147,7 @@
             <%= f.label :pregunta20C_20, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
             </div>
             <div class="col-md-8 input-group" style="padding: 15px;">
-            <%= f.text_field :pregunta20C_20_hora, id:"otros_servicios" %>
+            <%= f.text_field :pregunta20C_20_hora ,id:"res_pregunta20c_20_hora" %>
             <%= f.select :pregunta20C_20, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_20"}%>
             </div>
           </div>
@@ -3213,7 +3213,7 @@
           <%= f.label :pregunta20C_21, "20C. Cuanto tiempo le tomó  hacer éste trámite",id:"otros_servicios"%>
           </div>
           <div class="col-md-8 input-group" style="padding: 15px;">
-          <%= f.text_field :pregunta20C_21_hora ,id:"otros_servicios"%>
+          <%= f.text_field :pregunta20C_21_hora ,id:"res_pregunta20c_21_hora"%>
           <%= f.select :pregunta20C_21, ["Días","Horas","Minutos"],{:include_blank => true}, {class: "form-control",style:"margin-left:20px;",id:"res_pregunta20c_21"}%>
           </div>
         </div>
@@ -8028,7 +8028,7 @@ $(document).ready(function(){
         },
         {
         Pregunta: "Pregunta 20a_1",
-        Respuesta : $("#res_pregunta20a_1").is(':checked')
+        Respuesta : $("#res_pregunta20a_1").val()
         },
         {
         Pregunta: "Pregunta 20b_1",
@@ -8041,6 +8041,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_1",
         Respuesta : $("#res_pregunta20c_1").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_1_hora",
+        Respuesta : $("#res_pregunta20c_1_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_1",
@@ -8071,6 +8075,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_2").val()
         },
         {
+        Pregunta: "Pregunta 20c_2_hora",
+        Respuesta : $("#res_pregunta20c_2_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_2",
         Respuesta : $("#res_pregunta20d_2").val()
         },
@@ -8097,6 +8105,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_3",
         Respuesta : $("#res_pregunta20c_3").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_3_hora",
+        Respuesta : $("#res_pregunta20c_3_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_3",
@@ -8127,6 +8139,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_4").val()
         },
         {
+        Pregunta: "Pregunta 20c_4_hora",
+        Respuesta : $("#res_pregunta20c_4_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_4",
         Respuesta : $("#res_pregunta20d_4").val()
         },
@@ -8153,6 +8169,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_5",
         Respuesta : $("#res_pregunta20c_5").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_5_hora",
+        Respuesta : $("#res_pregunta20c_5_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_5",
@@ -8183,6 +8203,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_6").val()
         },
         {
+        Pregunta: "Pregunta 20c_6_hora",
+        Respuesta : $("#res_pregunta20c_6_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_6",
         Respuesta : $("#res_pregunta20d_6").val()
         },
@@ -8209,6 +8233,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_7",
         Respuesta : $("#res_pregunta20c_7").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_7_hora",
+        Respuesta : $("#res_pregunta20c_7_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_7",
@@ -8239,6 +8267,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_8").val()
         },
         {
+        Pregunta: "Pregunta 20c_8_hora",
+        Respuesta : $("#res_pregunta20c_8_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_8",
         Respuesta : $("#res_pregunta20d_8").val()
         },
@@ -8265,6 +8297,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_9",
         Respuesta : $("#res_pregunta20c_9").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_9_hora",
+        Respuesta : $("#res_pregunta20c_9_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_9",
@@ -8295,6 +8331,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_10").val()
         },
         {
+        Pregunta: "Pregunta 20c_10_hora",
+        Respuesta : $("#res_pregunta20c_10_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_10",
         Respuesta : $("#res_pregunta20d_10").val()
         },
@@ -8321,6 +8361,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_11",
         Respuesta : $("#res_pregunta20c_11").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_11_hora",
+        Respuesta : $("#res_pregunta20c_11_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_11",
@@ -8351,6 +8395,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_12").val()
         },
         {
+        Pregunta: "Pregunta 20c_12_hora",
+        Respuesta : $("#res_pregunta20c_12_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_12",
         Respuesta : $("#res_pregunta20d_12").val()
         },
@@ -8377,6 +8425,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_13",
         Respuesta : $("#res_pregunta20c_13").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_13_hora",
+        Respuesta : $("#res_pregunta20c_13_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_13",
@@ -8407,6 +8459,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_14").val()
         },
         {
+        Pregunta: "Pregunta 20c_14_hora",
+        Respuesta : $("#res_pregunta20c_14_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_14",
         Respuesta : $("#res_pregunta20d_14").val()
         },
@@ -8433,6 +8489,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_15",
         Respuesta : $("#res_pregunta20c_15").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_15_hora",
+        Respuesta : $("#res_pregunta20c_15_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_15",
@@ -8463,6 +8523,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_16").val()
         },
         {
+        Pregunta: "Pregunta 20c_16_hora",
+        Respuesta : $("#res_pregunta20c_16_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_16",
         Respuesta : $("#res_pregunta20d_16").val()
         },
@@ -8489,6 +8553,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_17",
         Respuesta : $("#res_pregunta20c_17").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_17_hora",
+        Respuesta : $("#res_pregunta20c_17_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_17",
@@ -8519,6 +8587,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_18").val()
         },
         {
+        Pregunta: "Pregunta 20c_18_hora",
+        Respuesta : $("#res_pregunta20c_18_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_18",
         Respuesta : $("#res_pregunta20d_18").val()
         },
@@ -8545,6 +8617,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_19",
         Respuesta : $("#res_pregunta20c_19").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_19_hora",
+        Respuesta : $("#res_pregunta20c_19_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_19",
@@ -8575,6 +8651,10 @@ $(document).ready(function(){
         Respuesta : $("#res_pregunta20c_20").val()
         },
         {
+        Pregunta: "Pregunta 20c_20_hora",
+        Respuesta : $("#res_pregunta20c_20_hora").val()
+        },
+        {
         Pregunta: "Pregunta 20d_20",
         Respuesta : $("#res_pregunta20d_20").val()
         },
@@ -8601,6 +8681,10 @@ $(document).ready(function(){
         {
         Pregunta: "Pregunta 20c_21",
         Respuesta : $("#res_pregunta20c_21").val()
+        },
+        {
+        Pregunta: "Pregunta 20c_21_hora",
+        Respuesta : $("#res_pregunta20c_21_hora").val()
         },
         {
         Pregunta: "Pregunta 20d_21",
