--- a/app/views/muestra/index.html.erb
+++ b/app/views/muestra/index.html.erb
@@ -1510,8 +1510,8 @@
           <td><%= (100* total/914.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(pregunta1: "MEDIMAS").count(:id) %>
-        <% total_contribitivo = Encuestum.where(municipio: "MEDIMAS").where(pregunta3: "Cotizante en el régimen contributivo").where(pregunta3:"Beneficiario en el régimen contributivo").count(:id) %>
-        <% total_subsidiado = Encuestum.where(municipio: "MEDIMAS").where(pregunta3:"Afiliado al régimen subsidiado (SISBEN)").count(:id) %>
+        <% total_contribitivo = Encuestum.where(municipio: "MEDIMAS").where(pregunta3: "Cotizante en el regimen contributivo").where(pregunta3:"Beneficiario en el regimen contributivo").count(:id) %>
+        <% total_subsidiado = Encuestum.where(municipio: "MEDIMAS").where(pregunta3:"Afiliado al regimen subsidiado (SISBEN)").count(:id) %>
         <tr>
           <td>MEDIMAS</td>
           <td><%= total_contribitivo %></td>
