saltos por pagina modulo 11

--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -3806,7 +3806,7 @@
     </div>
     <div>
         <%= f.label :nombre_supervisor, 'Nombre del supervisor' , id:"operativo"%>
-        <%= f.select :nombre_supervisor, ["Angela Prieto","Cristina Fajardo","Dario Saldarriaga","Eliana Galindo","Francisco Mateus","Jimmy Bernal","Jose Luis Fuentes","Leydi Sierra","Lina Coronado","Lorena Guantiva","Martha Castellanos","Martin Barrientos","Milena Marulanda","Victor Torres","Yalila Goyeneche","Yaneth Sanchez"],{:include_blank => true}, {class: "form-control", id:"identicacion_caracterizacion_usuario_supervisor"}%>
+        <%= f.select :nombre_supervisor, ["Angela Prieto","Cristina Fajardo","Dario Saldarriaga","Diana Morales","Eliana Galindo","Francisco Mateus","Jimmy Bernal","Jose Luis Fuentes","Leydi Sierra","Lina Coronado","Lorena Guantiva","Martha Castellanos","Martin Barrientos","Milena Marulanda","Victor Torres","Yalila Goyeneche","Yaneth Sanchez"],{:include_blank => true}, {class: "form-control", id:"identicacion_caracterizacion_usuario_supervisor"}%>
     </div>
     <div>
         <%= f.label :nombre_coordinador, 'Nombre del coordinador' , id:"operativo"%>
