--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -35,7 +35,7 @@
         <% Encuestum.group(:departamento).having("departamento != ?", "--").having("departamento != ?", "").having("departamento != ?", "05").order('COUNT(id) DESC').count(:id).each do |value,item|%>
           <% total = total + item %>
         <%end%>
-        <% Encuestum.group(:departamento).having("departamento != ?", "--").having("departamento != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
+        <% Encuestum.group(:departamento).having("departamento != ?", "--").having("departamento != ?", "").having("departamento != ?", "05").order('COUNT(id) DESC').count(:id).each do |value,item|%>
         <tr>
           <td scope="row"><%= value %></td>
           <td><%= item %></td>
